--- a/phrasebook/phrasebook/templates/translator.html
+++ b/phrasebook/phrasebook/templates/translator.html
@@ -1,33 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <script>
+        var HttpClient = function() {
+            this.get = function(aUrl, aCallback) {
+                var anHttpRequest = new XMLHttpRequest();
+                anHttpRequest.onreadystatechange = function() {
+                    if (anHttpRequest.readyState == 4 && anHttpRequest.status == 200)
+                        aCallback(anHttpRequest.responseText);
+                }
+
+                anHttpRequest.open( "GET", aUrl, true );
+                anHttpRequest.send( null );
+            }
+        }
+    </script>
+
     <meta charset="UTF-8">
     <title>Translator</title>
+
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+        .column {
+            float: left;
+            width: 50%;
+            padding: 10px;
+            height: 300px; /*to be removed*/
+        }
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+         /* Tooltip container */
+        .tooltip {
+            position: relative;
+            display: inline-block;
+            border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+        }
+
+        /* Tooltip text */
+        .tooltip .tooltiptext {
+            visibility: hidden;
+            width: 120px;
+            background-color: #555;
+            color: #fff;
+            text-align: center;
+            padding: 5px 0;
+            border-radius: 6px;
+
+            /* Position the tooltip text */
+            position: absolute;
+            z-index: 1;
+            bottom: 125%;
+            left: 50%;
+            margin-left: -60px;
+
+            /* Fade in tooltip */
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        /* Tooltip arrow */
+        .tooltip .tooltiptext::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: #555 transparent transparent transparent;
+        }
+
+        /* Show the tooltip text when you mouse over the tooltip container */
+        .tooltip:hover .tooltiptext {
+            visibility: visible;
+            opacity: 1;
+        }
+    </style>
 </head>
 <body>
+<h2>Two equal columns</h2>
 
-<table style="width:80%">
-<tr>
-<td>
-    Original text:
-</td>
-<td>
-    Translated text:
-</td>
-</tr>
-<tr>
-    <td>
-        <textarea id="original" name="story"
-          rows="5" cols="33">
-        </textarea>
-    </td>
-    <td>
+<div class="row">
+    <div class="column" style="background-color:#aaa;">
+        <h2>Column 1</h2>
+
+        {% for word in text %}
+         <div class="tooltip">{{word.org}}
+            <span class="tooltiptext">{{word.translated}}</span>
+         </div>
+        {% endfor %}
+
+    </div>
+    <div class="column" style="background-color:#bbb;">
+        <h2>Column 2</h2>
         <textarea id="translation" name="story"
-          rows="5" cols="33">
-        </textarea>
-    </td>
-</tr>
-</table>
-
+          rows="5" cols="33" style="width:99%"></textarea>
+    </div>
+</div>
 </body>
 </html>
