--- a/phrasebook/phrasebook/templates/translator.html
+++ b/phrasebook/phrasebook/templates/translator.html
@@ -94,17 +94,17 @@ function show() {
 
         {% for word in text %}
 
-        <div class="popup" onclick="show{{word.org}}()">{{word.org}}
-            <span class="popuptext" id="myPopup{{word.org}}">{{word.translated}}</span>
+        <div class="popup" onclick="show{{word}}()">{{word}}
+            <span class="popuptext" id="myPopup{{word}}">{{word}}</span>
          </div>
 
         <script>
-            function show{{word.org}}() {
+            function show{{word}}() {
 
-                var popup = document.getElementById("myPopup{{word.org}}");
+                var popup = document.getElementById("myPopup{{word}}");
 
                 var request = new XMLHttpRequest();
-                request.open('GET', '/translate_word?word={{word.org}}', true);
+                request.open('GET', '/translate_word?word={{word}}', true);
                 request.onload = function(){
                     var data = JSON.parse(this.response);
                     console.log(data);
